# boyang4sl07

4sl07/4sl07/: .gitignore  Cargo.toml  clean-kafka-deploy.sh  deploy.sh  start-kafka-deploy.sh  stop-kafka-deploy.sh  test.sh  upload-kafka.sh
4sl07/4sl07/kafka-stream/: Orchestrator.java  WordCountApplication.java
4sl07/4sl07/kafka-stream/scripts/: config.sh  repartition.sh  start-client.sh  start-server.sh
4sl07/4sl07/kafka_2.13-4.3.0/site-docs/: kafka_2.13-4.3.0-site-docs.tgz
4sl07/4sl07/kafka_mode/: ARCHITECTURE_AUDIT.md  ARCHITECTURE_DATA_FLOW.md  Cargo.toml  DISK_MANAGEMENT.md  README.md  attach.sh  cleanup.sh  collect_experiment.sh  deploy.sh  export_metrics.sh  metrics.sh  status.sh  timings.csv  validate.sh  watch.sh
4sl07/4sl07/kafka_mode/graphs/: README.md  map_worker_load.csv  summary_stats.csv
4sl07/4sl07/kafka_mode/scripts/: deploy_kafka.py  export_metrics.py  plot_experiments.py  run_cleaner.sh  run_coordinator.sh  run_worker.sh  validate_result.py
4sl07/4sl07/kafka_mode/src/: cleaner.rs  config.rs  coordinator.rs  main.rs  messages.rs  worker.rs
4sl07/4sl07/kafka_mode/src/core/: map.rs  reduce.rs
4sl07/4sl07/kafka_mode/src/kafka/: admin.rs  io.rs  mod.rs
4sl07/4sl07/scripts/: client.py  deploy.py  log_commands.py  machines.py  server.py
4sl07/4sl07/src/: lib.rs  main.rs
4sl07/4sl07/src/management_protocole/: client.rs  mod.rs  server.rs
4sl07/4sl07/src/management_protocole/file_transfer_protocole/: file_client.rs  file_server.rs  mod.rs
4sl07/4sl07/src/tasks/: map.rs  mod.rs  reduce.rs  saver.rs  testing.rs
(+12 files in other folders)
