[package]
name = "slr07"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic_enum = "0.3.0"
bincode = "1.3"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
futures = "0.3.32"
libc = "0.2.186"
rand = "0.10.1"
regex = "1.12.4"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
unicode-script = "0.5.8"

[features]
default = []
prod = []

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
