[package]
name = "kafka_mode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
rdkafka = { version = "0.37.0", features = ["tokio", "cmake-build"] }
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
unicode-script = "0.5.8"
uuid = { version = "1.18.1", features = ["v4"] }
